<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:textAlignment="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingTop="16dp"
            android:layout_marginLeft="18dp"


            android:layout_marginRight="18dp"
            android:text="MuslimApp "
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"


            android:layout_marginRight="18dp"
            android:text="@string/content_about"
            android:textAlignment="center"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_margin="5dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginLeft="18dp"


            android:layout_marginRight="18dp"
            android:layout_marginBottom="5dp"
            android:text="@string/tentang"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:layout_marginLeft="18dp"


            android:layout_marginRight="18dp"
            android:layout_marginBottom="18dp"
            android:text="@string/ucapan_about"
            android:textSize="14sp" />

        <TextView
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"


            android:layout_marginRight="18dp"
            android:layout_marginBottom="18dp"
            android:text="@string/informasi"
            android:textSize="14sp" />

        <TextView
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"


            android:layout_marginRight="18dp"
            android:layout_marginBottom="18dp"
            android:text="@string/nama"
            android:textSize="12sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

</LinearLayout>